--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "jade": "1.7.x",
         "less-middleware": "1.0.x",
         "async": "0.9.x",
-        "yahel": "*"
+        "yahel": "*",
+        "user-agent-parser": "0.6.x"
     },
     "engines": {
         "node": "0.10.x"
