added phones data, added link to M7

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
         "async": "0.9.x",
         "yahel": "*",
         "mobile-detect": "0.4.x",
-        "user-agent-parser": "0.6.x"
+        "user-agent-parser": "0.6.x",
+        "request": "*",
+        "async": "*",
+        "jsdom": "*"
     },
     "engines": {
         "node": "0.10.x"
