--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "async": "*",
         "jsdom": "*",
         "nodemailer": "1.3.x",
-        "nodemailer-direct-transport": "*"
+        "nodemailer-direct-transport": "*",
+        "basic-auth-connect": "1.x.x"
     },
     "engines": {
         "node": "0.10.x"
