--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
     "dependencies": {
         "jquery": "2.1.x",
         "bootstrap": "3.3.x",
-        "typehead.js": "0.10.x"
+        "typehead.js": "0.10.x",
+        "jquery.kladr": "2.2.1"
     }
 }
